--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,3 +26,8 @@ flutter:
   uses-material-design: true
   assets:
   - images/
+
+  fonts:
+    - family: Pacifico
+      fonts:
+        - asset: fonts/Pacifico-Regular.ttf
