--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,4 +30,12 @@ flutter:
   fonts:
     - family: Pacifico
       fonts:
-        - asset: fonts/Pacifico-Regular.ttf
+        - asset: fonts/Pacifico/Pacifico-Regular.ttf
+    - family: Lato
+      fonts:
+        - asset: fonts/Lato/Lato-Bold.ttf
+        - weight: 600
+        - asset: fonts/Lato/Lato-Black.ttf
+        - weight: 300
+        - asset: fonts/Lato/Lato-Light.ttf
+        - weight: 100
