--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,9 @@ dependencies:
   provider: ^4.3.1
   carousel_pro: ^1.0.0
   flutter_spinkit: ^4.1.2
-  cached_network_image: ^2.3.1
-
+  url_launcher: ^5.5.2
+  geolocator: ^5.1.5
+  location: ^3.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -26,16 +27,15 @@ flutter:
   uses-material-design: true
   assets:
   - images/
-
   fonts:
-    - family: Pacifico
-      fonts:
-        - asset: fonts/Pacifico/Pacifico-Regular.ttf
-    - family: Lato
-      fonts:
-        - asset: fonts/Lato/Lato-Bold.ttf
-        - weight: 600
-        - asset: fonts/Lato/Lato-Black.ttf
-        - weight: 300
-        - asset: fonts/Lato/Lato-Light.ttf
-        - weight: 100
+  - family: Pacifico
+    fonts:
+    - asset: fonts/Pacifico/Pacifico-Regular.ttf
+  - family: Lato
+    fonts:
+    - asset: fonts/Lato/Lato-Bold.ttf
+    - weight: 600
+    - asset: fonts/Lato/Lato-Black.ttf
+    - weight: 300
+    - asset: fonts/Lato/Lato-Light.ttf
+    - weight: 100
