--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<string>This app requires access to your location.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>This app requires access to your location.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app requires access to your gallery</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app requires access to your camera</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app requires access to your audio settings</string>
 </dict>
 </plist>
