--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   flutter_spinkit: ^4.1.2
   url_launcher: ^5.5.2
   geolocator: ^5.1.5
+  image_picker: ^0.6.7+7
+  image_cropper: ^1.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
