--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   geolocator: ^5.1.5
   image_picker: ^0.6.7+7
   image_cropper: ^1.3.1
+  flutter_speed_dial: ^1.2.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
