--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   image_picker: ^0.6.7+7
   image_cropper: ^1.3.1
   flutter_speed_dial: ^1.2.5
+  flutter_open_whatsapp: ^0.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
