--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   image_cropper: ^1.3.1
   flutter_speed_dial: ^1.2.5
   flutter_open_whatsapp: ^0.1.2
+  razorpay_flutter: ^1.2.2
+  fluttertoast: ^7.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
