--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,4 +68,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'com.google.firebase:firebase-auth:19.4.0'
     implementation 'androidx.multidex:multidex:2.0.1'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.1'
 }
