--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_open_whatsapp: ^0.1.2
   razorpay_flutter: ^1.2.2
   fluttertoast: ^7.1.1
+  flutter_staggered_grid_view: ^0.3.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
