--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,11 @@ dependencies:
   razorpay_flutter: ^1.2.2
   fluttertoast: ^7.1.1
   flutter_staggered_grid_view: ^0.3.2
+  intl: ^0.16.1
+  swipedetector: ^1.2.0
+  esys_flutter_share: ^1.0.2
+  image_picker_saver: ^0.3.0
+  cached_network_image: ^2.3.2+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
